--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,740 @@
+@media (max-width:1439px) {
+    .op__wrapper {
+        display: flex;
+        overflow-x: auto;
+        width: 100%;
+    }
+    .op__content--item {
+        min-width: 450px;
+        margin-right: 20px;
+    }
+
+
+
+    .ofp__wrapper {
+        display: flex;
+        overflow-x: auto;
+        width: 100%;
+    }
+    .ofp__wrapper--item {
+        min-width: 450px;
+        margin-right: 20px;
+    }
+
+}
+
+@media (max-width: 1420px) {
+
+    .news--img {
+        max-width: 650px;
+        max-height: 515px;
+    }
+    .news__table {
+        padding: 35px 30px;
+        max-width: 610px;
+        bottom: 240px;
+        left: 20px;
+    }
+
+}
+
+@media (max-width: 1385px) {
+    
+    .news__content {
+        justify-content: space-between;
+    }
+    .news--img {
+        max-width: 610px;
+        max-height: 515px;
+    }
+    .news__table {
+        padding: 35px 30px;
+        max-width: 570px;
+        bottom: 240px;
+        left: 20px;
+    }
+    .news__wrapper--item {
+    }
+}
+
+@media (max-width: 1299px) {
+    .eco--container .container {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .eco__content {
+        margin-left: unset;
+    }
+    .news__content {
+        display: flex;
+        flex-direction: column;
+    }
+    .news__content--item {
+        margin-bottom: 30px;
+    }
+    .news--img {
+        max-width: 670px;
+        max-height: 515px;
+    }
+    .news__table {
+        padding-left: 50px;
+        padding-top: 55px;
+        padding-bottom: 55px;
+        max-width: 610px;
+        bottom: 260px;
+        left: 30px;
+    }
+    .news__btn {
+        column-gap: unset;
+        max-width: 210px;
+    }
+    .news__btn .btn__arrow {
+        padding-right: 11px;
+    }
+}
+
+@media (max-width:1060px) {
+    .subscribe__content {
+        padding: 70px 30px;
+    }
+    .subscribe__title {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 990px) {
+    .food {
+        background-color: #EFF6F1;
+    }
+    .food--container {
+        padding: 60px 0;
+    }
+    .food__content {
+        display: flex;
+        flex-direction: column;
+        column-gap: 30px;
+    }
+    .food__content--item {
+        width: unset;
+        height: unset;
+        padding: 30px 0;
+        width: 420px;
+        margin-bottom: 30px;
+    }
+    .food__content--item:last-child {
+        margin-bottom: 0;
+    }
+    .food__text {
+    }
+    .food__text--1 {
+        padding: 30px 92px;
+        max-width: 313px;
+    }
+    .food__text--2 {
+        padding: 30px 79px 30px 80px;
+        max-width: 313px;
+    }
+    .food__text--3 {
+        padding: 30px 82px 30px 81px;
+        max-width: 314px;
+    }
+    .food__text h2 {
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 25px;
+        color: var(--main-color);
+        max-width: 154px;
+    }
+}
+
+@media (max-width: 960px) {
+    .feedback__border {
+        width: 100%;
+        padding: 0 207px;
+        margin-bottom: 100px;
+    }
+}
+
+@media (max-width: 1080px) {
+    .feedback__content {
+        display: flex;
+        overflow-x: auto;
+        width: 100%;
+    }
+    .feedback__content--item {
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 940px) {
+        /* Nav */
+
+        .nav__list {
+            display: none;
+        }
+        .cart__btn {
+            display: none;
+        }
+        .nav__toggle {
+            display: block;
+        }
+    
+        /* Nav Mobile */
+    
+        .nav--mobile {
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 99;
+            background-color: #fff;
+            flex-direction: column;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            align-items: center;
+            overflow-y: hidden;
+            justify-content: unset;
+        }
+        .nav--mobile .nav__list {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            row-gap: 30px;
+            font-size: 25px;
+            margin-top: 15%;
+        }
+        .nav--mobile .cart__btn {
+            display: flex;
+            margin-top: 30px;
+        }
+        .nav--mobile .nav__list a.active::after,
+        .nav--mobile .nav__list a:hover::after {
+            display: none;
+        }
+        .nav--mobile .logo {
+            position: fixed;
+            left: 30px;
+            top: 40px;
+        }
+        .nav--mobile .nav__toggle {
+            position: fixed;
+            top: 53px;
+            right: 30px;
+        }
+}
+
+@media (max-width: 821px) {
+    
+    /* Container */
+
+    .container {
+        padding: 0 30px;  /********************************************/
+    }
+
+    /* Title */
+
+    .green__title {
+        font-size: 30px;
+    }
+    .title {
+        font-size: 34px;
+    }
+    
+    /* Bottom */
+
+    .btn {
+        font-size: 18px;
+        padding: 17px 4px 17px 28px;
+        max-width: 200px;
+    }
+
+    /* Nav */
+
+    .nav__list {
+        display: none;
+    }
+    .cart__btn {
+        display: none;
+    }
+    .nav__toggle {
+        display: block;
+    }
+
+    /* Nav Mobile */
+
+    .nav--mobile {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 99;
+        background-color: #fff;
+        flex-direction: column;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        align-items: center;
+        overflow-y: hidden;
+        justify-content: unset;
+    }
+    .nav--mobile .nav__list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 30px;
+        font-size: 25px;
+        margin-top: 15%; /**************************************/
+    }
+    .nav--mobile .cart__btn {
+        display: flex;
+        margin-top: 30px;
+    }
+    .nav--mobile .nav__list a.active::after,
+    .nav--mobile .nav__list a:hover::after {
+        display: none;
+    }
+    .nav--mobile .logo {
+        position: fixed;
+        left: 30px; /***************************/
+        top: 40px;
+    }
+    .nav--mobile .nav__toggle {
+        position: fixed;
+        top: 53px;
+        right: 30px; /************************/
+    }
+
+    /* Header */
+
+    .header__row {
+        height: unset;
+    }
+    .header__row--container {
+        background-position: right -561px top -24px;
+        padding-top: 120px;
+        height: unset;
+        padding-bottom: 140px;
+    }
+    .header__title {
+        font-size: 44px;
+        max-width: 380px;
+    }
+
+    /* Ad */
+
+    .ad {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+    .ad__content {
+        display: block;
+    }
+    .ad__content--item {
+        border-radius: 30px;
+        height: unset;
+        width: unset;
+        padding-left: 35px;
+        padding-top: 35px;
+        padding-bottom: 40px;
+        font-size: 25px;
+    }
+    .ad__content--item-1 {
+        background-size: cover;
+        margin-bottom: 50px;
+    }
+    .ad__content--item-2 {
+        background-size: cover;
+    }
+    .ad__content--item p {
+        max-width: 175px;
+    }
+
+    /* About */
+
+    .about__content {
+        display: block;
+        padding-top: 30px;
+        padding-bottom: 60px;
+    }
+    .about__btn {
+        margin-top: 35px;
+    }
+    .about__content--item {
+        width: unset;
+    }
+    .about__content--item .title {
+        margin-top: 10px;
+        margin-bottom: 11px;
+    }
+    .about__content--item-par {
+        margin-bottom: 35px;
+    }
+    .about__img--border {
+        width: unset;
+        height: unset;
+        padding: 15px;
+    }
+    .about__img--border img {
+        height: 50px;
+        width: 75px;
+    }
+    .about__content--item-img {
+        margin-bottom: 30px;
+    }
+    .about__content--item-par {
+        font-size: 15px;
+    }
+    .about__wrapper--content h2 {
+        font-size: 21px;
+        margin-bottom: 5px;
+    }
+    .about__wrapper--content-par {
+        font-size: 15px;
+    }
+
+    /* Our Products */
+
+    .op {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .op__wrapper {
+        display: flex;
+        overflow-x: auto;
+        width: 100%;
+    }
+    .op__content--item {
+        border-radius: 22px;
+        min-width: 250px;
+    }
+    .category {
+        font-size: 13px;
+        padding: 5px 8px;
+        max-width: 85px;
+    }
+    .op__item--name {
+        font-size: 18px;
+        margin-top: 20px;
+        margin-bottom: 11px;
+    }
+    .cost {
+        align-items: unset;
+    }
+    .cost__content {
+        display: block;
+        margin-right: 9px;
+    }
+    .cost--old {
+        font-size: 15px;
+        margin-right: 10px;
+        margin-bottom: 5px;
+    }
+    .cost--new {
+        font-size: 15px;
+        margin-right: 10px;
+    }
+
+    /* Feedback */
+
+    .feedback {
+        background-color: #FCFCFC;
+    }
+    .feedback--container {
+        background-image: unset;
+        height: unset;
+        padding-top: 60px;
+        padding-bottom: 50px;
+    }
+    .feedback__wrapper .title {
+        margin-bottom: 40px;
+        font-size: 30px;
+    }
+    .feedback__border {
+        margin-bottom: 60px;
+        width: 100%;
+    }
+    .fb__work {
+        margin-bottom: 60px;
+    }
+    .feedback__content {
+        display: flex;
+        overflow-x: auto;
+        width: 100%;
+        align-items: center;
+        padding-bottom: 40px;
+    }
+    .feedback__content--item {
+        height: 224px;
+        width: 224px;
+        padding: 6px;
+        margin-right: 25px;
+    }
+    .fb__content--item {
+        width: 200px;
+        height: 200px;
+        padding-top: 75px;
+    }
+    .fb__digital {
+        font-size: 30px;
+    }
+    .fb__word {
+        font-size: 15px;
+    }
+
+    /* Offer Products */
+
+    .ofp {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .ofp__content--item {
+        display: unset;
+    }
+    .ofp__title {
+        margin-top: 12px;
+        margin-bottom: 18px;
+        font-size: 30px;
+    }
+    .ofp__btn {
+        margin-bottom: 30px;
+    }
+    .ofp__btn p {
+        max-width: 80px;
+    }
+    .ofp__wrapper {
+        display: flex;
+        overflow-x: auto;
+        width: 100%;
+    }
+    .ofp__wrapper--item {
+        border-radius: 22px;
+        min-width: 250px;
+    }
+
+    /* Eco Friendly */
+
+    .eco {
+
+    }
+    .eco--container {
+        height: unset;
+        max-width: 1440px;
+        margin: 0 auto;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .eco__content {
+        padding: 30px 15px 30px 30px;
+        margin-left: unset;
+    }
+    .eco__title {
+        max-width: 301px;
+        margin-bottom: 20px;
+        font-size: 30px;
+        margin-top: 10px;
+    }
+    .eco__content--title {
+        font-size: 23px;
+        margin-bottom: 10px;
+    }
+    .eco__content--text {
+        font-size: 15px;
+        max-width: 620px;
+        margin-bottom: 12px;
+    }
+
+    /* Food */
+
+    .food {
+        background-color: #EFF6F1;
+    }
+    .food--container {
+        padding: 60px 0;
+    }
+    .food__content {
+        display: flex;
+        flex-direction: column;
+        column-gap: 30px;
+    }
+    .food__content--item {
+        width: unset;
+        height: unset;
+        padding: 30px 0;
+        width: 460px;
+        margin-bottom: 30px;
+    }
+    .food__content--item:last-child {
+        margin-bottom: 0;
+    }
+    .food__text {
+    }
+    .food__text--1 {
+        padding: 30px 92px;
+        max-width: 313px;
+    }
+    .food__text--2 {
+        padding: 30px 79px 30px 80px;
+        max-width: 313px;
+    }
+    .food__text--3 {
+        padding: 30px 82px 30px 81px;
+        max-width: 314px;
+    }
+    .food__text h2 {
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 25px;
+        color: var(--main-color);
+        max-width: 154px;
+    }
+
+    /* News */
+
+    .news {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .news__btn {
+        min-width: 160px;
+        padding-left: 11px;
+        column-gap: 10px;
+    }
+    .news__content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .news__content--item {
+        margin-bottom: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .news--img {
+        max-width: 100%;
+        max-height: unset;
+    }
+    .news__table {
+        padding: 30px 45px;
+        bottom: 200px;
+        left: unset;
+        max-width: 610px;
+    }
+    .news__name h2 {
+        font-size: 17px;
+    }
+    .table__title {
+        font-size: 25px;
+    }
+    .table__text {
+        font-size: 18px;
+        margin-top: 22px;
+    }
+    .table__btn p {
+        font-size: 20px;
+    }
+    .table__arrow {
+        padding-left: 6px;
+        padding-top: 7px;
+        height: 29px;
+        width: 29px;
+    }
+
+    /* Subscribe */
+
+    .subscribe__content {
+        padding: 50px 30px;
+        margin-bottom: 50px;
+        display: block;
+        justify-content: inset;
+        background-size: cover;
+        border-radius: 30px;
+    }
+    .subscribe__content--item {
+        display: flex;
+        align-items: center;
+        column-gap: unset;
+        justify-content: space-between;
+        max-width: 100%;
+    }
+    .subscribe__title {
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 40px;
+        color: #fff;
+        max-width: unset;
+        margin-bottom: 10px;
+    }
+    .subscribe__form {
+        font-size: 18px;
+        padding: 26px auto 27px 30px;
+    }
+    .subscribe__form::placeholder {
+        color: #525C60;
+    }
+    .btn__subscribe {
+        font-family: 'Open Sans';
+        font-weight: 700;
+        font-size: 18px;
+    }
+    .subscribe__btn {
+        margin-top: unset;
+        padding: 19px 8px 19px 15px;
+        column-gap: 10px;
+    }
+
+    /* Contacts */
+
+    .contacts {
+        padding-top: 40px;
+        padding-bottom: 50px;
+    }
+    .contacts--container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contacts__content {
+        display: unset;
+        max-height: unset;
+    }
+    .contact__us {
+        padding-right: unset;
+        padding-left: 20px;
+        text-align: left;
+        border-right: unset;
+        border-left: 1px #D5D5D5 solid;
+        margin-bottom: 50px;
+    }
+    .utility__pages {
+        margin-top: 50px;
+    }
+
+    /* Footer */
+
+    .footer {
+        border-top: 1px #D5D5D5 solid;
+        padding-top: 25px;
+        padding-bottom: 30px;
+        text-align: center;
+    }
+    .footer p {
+        font-family: 'Open Sans';
+        font-weight: 400;
+        font-size: 15px;
+        color: #525C60;
+    }
+
+}
+
+@media (max-width: 621px) {
+    .subscribe__form {
+        font-size: 15px;
+        padding: 26px 10px 27px 10px;
+    }
+}
+
 @media (max-width: 461px) {
     
     /* Container */
